[gd_scene load_steps=4 format=3 uid="uid://c6w5wfuqaneav"]

[ext_resource type="Script" path="res://Scripts/Menus/OptionsMenu/AudioSliderSettings.gd" id="1_gvv23"]
[ext_resource type="LabelSettings" uid="uid://cjv85p6brrrwo" path="res://Prefabs/UI/OptionsLabelSettings.tres" id="2_pm856"]
[ext_resource type="PackedScene" uid="uid://51l123v4aoic" path="res://Prefabs/UI/CustomSlider10.tscn" id="3_hyddg"]

[node name="AudioSliderSettings" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_gvv23")
bus_name = "UI"

[node name="AudioNameLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Master Volume"
label_settings = ExtResource("2_pm856")

[node name="CustomSlider10" parent="." instance=ExtResource("3_hyddg")]
layout_mode = 2

[node name="Blank" type="Control" parent="."]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
